--- a/package.json
+++ b/package.json
@@ -10,8 +10,20 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.11.0",
     "@astrojs/check": "^0.7.0",
+    "@astrojs/lit": "^4.3.0",
+    "@astrojs/react": "^3.6.0",
+    "@astrojs/svelte": "^5.6.0",
+    "@astrojs/tailwind": "^5.1.0",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@webcomponents/template-shadowroot": "^0.2.1",
+    "astro": "^4.11.0",
+    "lit": "^3.1.4",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "svelte": "^4.2.18",
+    "tailwindcss": "^3.4.4",
     "typescript": "^5.5.2"
   }
 }
