--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.7.0",
+    "@astrojs/db": "^0.11.7",
     "@astrojs/lit": "^4.3.0",
     "@astrojs/node": "^8.3.2",
     "@astrojs/react": "^3.6.0",
