--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@webcomponents/template-shadowroot": "^0.2.1",
     "astro": "^4.11.0",
     "lit": "^3.1.4",
+    "lucia": "^3.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "svelte": "^4.2.18",
