--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "svelte": "^4.2.18",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.5.2"
+  },
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.5.13"
   }
 }
